# spatiotemporal-crime-network-analysis-framework

./: .gitattributes  .gitignore  LICENSE  README.md  monteCarlosimulations.npy  pyproject.toml
data/: VeiculosSubtraidos.parquet  roubo_veiculo_selecionado.parquet
notebooks/: 01_preprocessing.ipynb  02_grid_and_timeseries.ipynb  03_network_analysis.ipynb
scripts/: run_pipeline.py  test_pipeline.py
src/vehicle_theft_network/: __init__.py  config.py
src/vehicle_theft_network/data/: loader.py  preprocessor.py
src/vehicle_theft_network/event_sync/: analyzer.py
src/vehicle_theft_network/grid/: builder.py
src/vehicle_theft_network/network/: builder.py  metrics.py
src/vehicle_theft_network/timeseries/: builder.py
src/vehicle_theft_network/visualization/: map_utils.py  plots.py
