[project]
name = "vehicle-theft-network"
version = "1.0.0"
description = "Complex network analysis of vehicle theft dynamics in São Paulo, Brazil"
authors = [
    { name = "Vinícius Teixeira de Carvalho Freitas", email = "vinicius.teixeira.carvalho@usp.br" },
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["complex-networks", "crime-analysis", "event-synchronization", "time-series", "geospatial"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "numpy>=2.0",
    "pandas>=2.0",
    "geopandas>=0.14",
    "shapely>=2.0",
    "networkx>=3.2",
    "pyunicorn>=0.8",
    "unidecode>=1.3",
    "folium>=0.15",
    "plotly>=5.18",
    "branca>=0.7",
    "scipy>=1.11",
    "openpyxl>=3.1",
    "pyarrow>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "nbconvert>=7.0",
]

[project.scripts]
run-pipeline = "scripts.run_pipeline:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vehicle_theft_network"]

[dependency-groups]
dev = [
    "jupyter>=1.0",
    "ipykernel>=6.0",
]
